# ricardo-semiao.github.io

./: .gitignore  404.html  README.md  _config.yml  cv.html  dev.py  friendship.html  home_style.css  index.html  index.md  index_template.html  pyproject.toml  robots.txt  scripts.js  site_structure.css  site_structure.html  site_structure.js  site_style.css  sitemap.xml  style.css  style_index.css  style_site.css  test.html
assets/: global.css  global.js  site_structure.html  site_structure.js
blog/: index.html  listings.json  module.css  search.json
config/: deployment.yaml  external_sources.yaml  jobs.yaml  step_presets.yaml
course-rfcd/: 404.html  appendix-apêndice.html  control-conds.html  data-attrs.html  dict.html  ds.html  funs-envs.html  ggplot.html  import-tidy.html  index.html  intro1.html  intro2.html  intro3.html  intro4.html  introduction.html  manipulate.html  ml.html  others1.html  others2.html  others4.html  paradigms.html  philosophy.html  purrr.html  recap1.html  recap2.html  recap3.html  recap4.html  reference-keys.txt  refs.html  regression.html  search.json  stats-prob.html  stringr-forcats.html  subset.html  syntax-vars.html  tidyr-dplyr.html  time-series.html  unite.html  visualize.html
cv/: .gitignore  README.md  cv_style.css  index.html  index_template.html  module.css  site_structure.html  text.tex
cv_pdf/: cv_style.sty  palette.tex  text.tex
dev/: .env  dev.py  fetch.py  gallery.py  jobs.py  utils.py
gallery/: index.html  module.css  module.js
index/: module.css
site_assets/: components.html  palette.css  site_structure.css  (+3 more)
(+203 files in other folders)
