[project]
name = "ricardo-semiao-github-io"
version = "0.1.0"
description = "Ricardo Semião's website"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "numpy>=2.3.4",
    "python-frontmatter>=1.1.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "template-injector",
    "armasonry",
    "typing>=3.10.0.0",
    "toml>=0.10.2",
    "packaging>=25.0",
]

[tool.uv.sources]
template-injector = { path = "../ricardo-semiao/packages/template_injector", editable = true }
armasonry = { path = "../ricardo-semiao/packages/armasonry", editable = true }

[external]
dependencies = [
    "pkg:generic/latexmk>=4.0",
    "pkg:generic/quarto>=1.0.0",
    "pkg:generic/sass>=1.0.0",
]
